<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Standard Deviation</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="author">by Radu Butoi</string>
    <string name="pref_mean">Mean</string>
    <string name="pref_median">Median</string>
    <string name="pref_mode">Mode</string>
    <string name="pref_dev">Sample standard deviation (s)</string>
    <string name="pref_var">Variance</string>
    <string name="pref_range">Range</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="action_clear">Clear data</string>
    <string name="s">s</string>

</resources>
